--- a/Tutorial 5,6,7/4- Pandas tutorial.ipynb
+++ b/Tutorial 5,6,7/4- Pandas tutorial.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -124,7 +126,7 @@
        "Row5       16       17       18      19"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +150,7 @@
        "Name: Row1, dtype: int32"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,6 +406,132 @@
    ],
    "source": [
     "df['Column1'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_csv('random_data.csv',sep=';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>David Costa</td>\n",
+       "      <td>46</td>\n",
+       "      <td>umeadows@yahoo.com</td>\n",
+       "      <td>East Ryan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jennifer Hamilton</td>\n",
+       "      <td>36</td>\n",
+       "      <td>ericdavies@thompson.com</td>\n",
+       "      <td>North Paulmouth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Daniel Paul</td>\n",
+       "      <td>47</td>\n",
+       "      <td>qbradley@gmail.com</td>\n",
+       "      <td>Bakerhaven</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Allen Bryant</td>\n",
+       "      <td>19</td>\n",
+       "      <td>vincentspencer@smith.com</td>\n",
+       "      <td>Darlenebury</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Courtney Vasquez</td>\n",
+       "      <td>36</td>\n",
+       "      <td>richard49@conrad-hahn.com</td>\n",
+       "      <td>Karenstad</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Name  Age                      Email         Location\n",
+       "0        David Costa   46         umeadows@yahoo.com        East Ryan\n",
+       "1  Jennifer Hamilton   36    ericdavies@thompson.com  North Paulmouth\n",
+       "2        Daniel Paul   47         qbradley@gmail.com       Bakerhaven\n",
+       "3       Allen Bryant   19   vincentspencer@smith.com      Darlenebury\n",
+       "4   Courtney Vasquez   36  richard49@conrad-hahn.com        Karenstad"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20 entries, 0 to 19\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   Name      20 non-null     object\n",
+      " 1   Age       20 non-null     int64 \n",
+      " 2   Email     20 non-null     object\n",
+      " 3   Location  20 non-null     object\n",
+      "dtypes: int64(1), object(3)\n",
+      "memory usage: 772.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info"
    ]
   },
   {
