--- a/Ridge And Lasso Regression Implementation/Ridge and Lasso Regression, Linear Regression Practical Implementation.ipynb
+++ b/Ridge And Lasso Regression Implementation/Ridge and Lasso Regression, Linear Regression Practical Implementation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "90443bc1-7789-4569-b12f-de349814c2c5",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0b83d515-27da-43e3-9ff2-cd8e6a8f94d4",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "7e210769-6872-47b7-800c-02369d963c93",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2ea67477-c66b-4511-abb3-06af4424a621",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        "[14448 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c332aacf-9298-4ff0-8d79-c1c7b43ba933",
    "metadata": {},
    "outputs": [],
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d64cd6f2-c491-49ea-ae0a-f2b594ca89e4",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "92020e16-3ce4-4644-a766-0b117339a9ad",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "          37.77      , -122.42      ]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "17f1575d-2c61-414e-9b44-7513faec9da2",
    "metadata": {},
    "outputs": [],
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "3e6df664-687a-4ac4-8071-27a8dabe912c",
    "metadata": {},
    "outputs": [
@@ -1002,7 +1002,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "e2729bc6-37a3-4782-9f63-4eb9aedb1c28",
    "metadata": {},
    "outputs": [],
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "id": "fed82c57-f0cb-4949-b4d0-c6dc7a34226e",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1034,7 @@
        "-0.5268253746355749"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "eead7121-dc0d-4c8f-8df7-099024d8646f",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "id": "5f2c001e-ffb2-4b57-8d11-d32b3f281c5a",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
        "       1.82744133])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,17 +1079,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "7ea1773b-de55-443b-a733-ad134d3cb0f0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1fc08157ec0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c51bfa6300>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "c6277eb0-275f-4fd8-924c-ec64686a3418",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "df7b5a99-bc7f-4e0d-aeb4-af8beca64d84",
    "metadata": {},
    "outputs": [],
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "id": "8f4cb3aa-d2e3-4581-bece-6bcfdad8e641",
    "metadata": {},
    "outputs": [
@@ -1140,7 +1140,7 @@
        "0.3451339380943971"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,12 +1154,12 @@
    "id": "7e72e459-fb96-4134-91b3-0af59dc6e6e7",
    "metadata": {},
    "source": [
-    "## Ridge Regression Algorithm"
+    "### Ridge Regression Algorithm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 52,
    "id": "df0b8b4f-f8e9-4ca6-a0f9-a9dddac2897e",
    "metadata": {},
    "outputs": [],
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "id": "94bcf7ae-a68a-47a3-8dbd-9e6c4f5aca63",
    "metadata": {},
    "outputs": [],
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "id": "f0130210-4b55-4473-9a0b-d61d6104da43",
    "metadata": {},
    "outputs": [
@@ -1606,7 +1606,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "id": "ce829363-76f6-40ce-bc28-f568ca8c5d5e",
    "metadata": {},
    "outputs": [
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "id": "696fd89c-0877-4569-a3e0-538c0ec4f7fb",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "id": "ee1fcc26-d7cd-4410-b1a8-ab2fa333b3e8",
    "metadata": {},
    "outputs": [],
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "id": "3bebc612-3ef9-49c4-b664-ff78b3511ace",
    "metadata": {},
    "outputs": [
@@ -1673,7 +1673,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\girib\\AppData\\Local\\Temp\\ipykernel_7688\\4142520672.py:1: UserWarning: \n",
+      "C:\\Users\\girib\\AppData\\Local\\Temp\\ipykernel_26236\\4142520672.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1692,7 +1692,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 66,
    "id": "1e1d6ed5-b07d-4586-98f7-32c7915e18c9",
    "metadata": {},
    "outputs": [],
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "id": "5f551ea6-f079-4e50-8bef-f5701cd1ac39",
    "metadata": {},
    "outputs": [
@@ -1733,7 +1733,7 @@
        "0.3438394544140423"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 71,
    "id": "b918032f-49cf-4360-b4ca-125018a23db4",
    "metadata": {},
    "outputs": [],
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "id": "1d9b9d1e-3d31-4aad-8642-78fb748fb02e",
    "metadata": {},
    "outputs": [],
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "id": "dbfff97c-1a4d-404e-88c9-33b730c77d77",
    "metadata": {},
    "outputs": [
@@ -2198,7 +2198,7 @@
        "             scoring='neg_mean_squared_error')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2211,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "id": "2ee26eaf-c1dc-4b8c-bf52-e63c62cffdd9",
    "metadata": {},
    "outputs": [
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 79,
    "id": "eafafe14-ddfd-4e47-b219-d5475fc16b94",
    "metadata": {},
    "outputs": [],
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "id": "b13cfe84-741d-4e57-9d7f-33563cbc4d98",
    "metadata": {},
    "outputs": [],
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "id": "31c6ef1d-e0b8-4675-b592-9228d2d23bd6",
    "metadata": {},
    "outputs": [
@@ -2259,7 +2259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\girib\\AppData\\Local\\Temp\\ipykernel_7688\\1209211481.py:1: UserWarning: \n",
+      "C:\\Users\\girib\\AppData\\Local\\Temp\\ipykernel_26236\\1209211481.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -2278,7 +2278,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 85,
    "id": "f424c662-6f37-43e0-b257-024897547e81",
    "metadata": {},
    "outputs": [],
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 90,
    "id": "cf31a63a-0add-465a-b28f-3f51a3931c86",
    "metadata": {},
    "outputs": [
@@ -2319,7 +2319,7 @@
        "0.3438394544140423"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2331,9 +2331,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
