--- a/Code With Harry Data Science Course/4. Project 1 - Coders of Delhi/4. Finding Pages You Might Like/Finding Pages You Might Like.ipynb
+++ b/Code With Harry Data Science Course/4. Project 1 - Coders of Delhi/4. Finding Pages You Might Like/Finding Pages You Might Like.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2fd1d7ec-6813-4b9f-b4a6-72ab3fa46308",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
     "    if user_id not in user_pages:\n",
     "        return []\n",
     "        \n",
-    "    user_liked_pages = user_pages[user_id]\n",
+    "    user_liked_pages = user_pages[user_id] ## if entry is 1, means user id is 1, then according to data [101, 102] store in user_liked_pages\n",
     "    page_suggestion = {}\n",
     "\n",
     "    for other_user, pages in user_pages.items():\n",
