Data analysis using Numpy (Creating NumPy Arrays)

--- a/Code With Harry Data Science Course/5. Data analysis using Numpy/1. Why use NumPy/Why use NumPy.ipynb
+++ b/Code With Harry Data Science Course/5. Data analysis using Numpy/1. Why use NumPy/Why use NumPy.ipynb
@@ -51,6 +51,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4d8315e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.002020120620727539\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Harry Bhai Task\n",
+    "import numpy as np\n",
+    "import time\n",
+    "\n",
+    "size  = 10_000\n",
+    "\n",
+    "# Python list\n",
+    "l1 = list(range(size))\n",
+    "l2 = list(range(size))\n",
+    "\n",
+    "start = time.time()\n",
+    "list_squares = [x ** 2 for x in l1]\n",
+    "end = time.time()\n",
+    "\n",
+    "print(end - start)\n",
+    "\n",
+    "# NumPy array\n",
+    "arr1 = np.array(list(range(size)))\n",
+    "arr2 = np.array(list(range(size)))\n",
+    "\n",
+    "start = time.time()\n",
+    "numpy_squares = arr1 ** 2\n",
+    "end = time.time()\n",
+    "\n",
+    "print(end - start)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "db2ed0e2-db1a-4eb2-a4f3-e72482783e0f",
    "metadata": {},
@@ -153,9 +196,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
