--- a/Code With Harry Data Science Course/5. Data analysis using Numpy/3. Indexing and slicing/Indexing and slicing.ipynb
+++ b/Code With Harry Data Science Course/5. Data analysis using Numpy/3. Indexing and slicing/Indexing and slicing.ipynb
@@ -103,7 +103,7 @@
     "\n",
     "\n",
     "\n",
-    "##### Use .copy() if you need an independent copy."
+    "###### Use .copy() if you need an independent copy."
    ]
   },
   {
@@ -313,6 +313,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "id": "5638659d-e7e4-4e7d-a25c-ccbfefa956c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5,6])\n",
+    "indx = [1,3,5]\n",
+    "arr[indx]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "id": "90693f00-6222-4c15-a10e-daae82686163",
    "metadata": {},
@@ -351,8 +388,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "id": "76a6c6e7-52c2-4825-ac64-62de7a3bc57f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "        if (window._pyforest_update_imports_cell) { window._pyforest_update_imports_cell('import numpy as np'); }\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74\n",
+      " 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98\n",
+      " 99]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array(list(range(100)))\n",
+    "mask = arr > 50\n",
+    "print(arr[mask])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5638659d-e7e4-4e7d-a25c-ccbfefa956c0",
+   "id": "b91ad2b2-c9d9-45dc-859d-ce2e0808a93b",
    "metadata": {},
    "outputs": [],
    "source": []
