SQL for Data Science (Joins in MySQL)

--- a/Code With Harry Data Science Course/9. SQL for Data Science/13. Foreign Keys/Foreign Keys.ipynb
+++ b/Code With Harry Data Science Course/9. SQL for Data Science/13. Foreign Keys/Foreign Keys.ipynb
@@ -1,1 +1,183 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Foreign Keys in MySQL\n", "This guide demonstrates how to create a database, define tables, and use foreign keys to establish relationships between them."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# 1. Create a Database\n", "CREATE DATABASE school;\n", "USE school;"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 2. Create Tables\n", "We'll create two tables: `students` and `classes`.\n", "Each student will belong to a class, creating a one-to-many relationship (one class has many students)."]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Create classes Table\n", "CREATE TABLE classes (\n", "    class_id INT AUTO_INCREMENT PRIMARY KEY,\n", "    class_name VARCHAR(50) NOT NULL\n", ");"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Create students Table\n", "CREATE TABLE students (\n", "    student_id INT AUTO_INCREMENT PRIMARY KEY,\n", "    student_name VARCHAR(100) NOT NULL,\n", "    class_id INT,\n", "    FOREIGN KEY (class_id) REFERENCES classes(class_id)\n", "        ON UPDATE CASCADE\n", "        ON DELETE SET NULL\n", ");"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 3. Insert Sample Data"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# Insert into classes\n", "INSERT INTO classes (class_name) VALUES ('Mathematics'), ('Science'), ('History');\n", "\n", "# Insert into students\n", "INSERT INTO students (student_name, class_id) VALUES \n", "('Alice', 1),\n", "('Bob', 2),\n", "('Charlie', 1);"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 4. Explanation of Foreign Key Behavior\n", "- `class_id` in `students` is a foreign key referencing `class_id` in `classes`.\n", "- `ON DELETE SET NULL`: If a class is deleted, the related students will have `class_id` set to NULL.\n", "- `ON UPDATE CASCADE`: If a class ID changes, it updates automatically in `students`."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## 5. View the Relationships"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# View foreign key constraints on students table\n", "SHOW CREATE TABLE students;"]}, {"cell_type": "code", "execution_count": null, "metadata": {}, "outputs": [], "source": ["# See all foreign keys in the database\n", "SELECT \n", "    table_name, \n", "    column_name, \n", "    constraint_name, \n", "    referenced_table_name, \n", "    referenced_column_name\n", "FROM \n", "    information_schema.key_column_usage\n", "WHERE \n", "    referenced_table_name IS NOT NULL\n", "    AND table_schema = 'school';"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Understanding ON UPDATE CASCADE and ON DELETE SET NULL"]}, {"cell_type": "markdown", "metadata": {}, "source": ["**1. ON UPDATE CASCADE**\n", "- If the referenced `class_id` is updated in `classes`, it also updates in `students`.\n", "- Example:\n", "```sql\n", "UPDATE classes SET class_id = 10 WHERE class_id = 1;\n", "```\n", "\n", "**2. ON DELETE SET NULL**\n", "- If a class is deleted, students in that class will have `class_id` set to NULL.\n", "- Example:\n", "```sql\n", "DELETE FROM classes WHERE class_id = 2;\n", "```\n"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Why Use These Options?\n", "- `ON UPDATE CASCADE` is useful when the parent key may change.\n", "- `ON DELETE SET NULL` helps retain child records while removing broken references."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Alternatives\n", "- `ON DELETE CASCADE`: Deletes child rows when parent is deleted.\n", "- `ON DELETE RESTRICT`: Prevents deletion if child rows exist.\n", "- `ON DELETE NO ACTION`: Same as RESTRICT in MySQL.\n", "- `ON DELETE SET DEFAULT`: Not supported in MySQL."]}], "metadata": {"kernelspec": {"display_name": "SQL", "language": "sql", "name": "sql"}, "language_info": {"name": "sql"}}, "nbformat": 4, "nbformat_minor": 5}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Foreign Keys in MySQL\n",
+    "This guide demonstrates how to create a database, define tables, and use foreign keys to establish relationships between them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE DATABASE school;\n",
+    "USE school;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Create Tables\n",
+    "We'll create two tables: `students` and `classes`.\n",
+    "Each student will belong to a class, creating a one-to-many relationship (one class has many students)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE TABLE classes (\n",
+    "    class_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    class_name VARCHAR(50) NOT NULL\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CREATE TABLE students (\n",
+    "    student_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    student_name VARCHAR(100) NOT NULL,\n",
+    "    class_id INT,\n",
+    "    FOREIGN KEY (class_id) REFERENCES classes(class_id)\n",
+    "        ON UPDATE CASCADE\n",
+    "        ON DELETE SET NULL\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Insert Sample Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INSERT INTO classes (class_name) VALUES ('Mathematics'), ('Science'), ('History');\n",
+    "\n",
+    "INSERT INTO students (student_name, class_id) VALUES \n",
+    "('Alice', 1),\n",
+    "('Bob', 2),\n",
+    "('Charlie', 1);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Explanation of Foreign Key Behavior\n",
+    "- `class_id` in `students` is a foreign key referencing `class_id` in `classes`.\n",
+    "- `ON DELETE SET NULL`: If a class is deleted, the related students will have `class_id` set to NULL.\n",
+    "- `ON UPDATE CASCADE`: If a class ID changes, it updates automatically in `students`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. View the Relationships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SHOW CREATE TABLE students;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT \n",
+    "    table_name, \n",
+    "    column_name, \n",
+    "    constraint_name, \n",
+    "    referenced_table_name, \n",
+    "    referenced_column_name\n",
+    "FROM \n",
+    "    information_schema.key_column_usage\n",
+    "WHERE \n",
+    "    referenced_table_name IS NOT NULL\n",
+    "    AND table_schema = 'school';"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Understanding ON UPDATE CASCADE and ON DELETE SET NULL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. ON UPDATE CASCADE**\n",
+    "- If the referenced `class_id` is updated in `classes`, it also updates in `students`.\n",
+    "- Example:\n",
+    "```sql\n",
+    "UPDATE classes SET class_id = 10 WHERE class_id = 1;\n",
+    "```\n",
+    "\n",
+    "**2. ON DELETE SET NULL**\n",
+    "- If a class is deleted, students in that class will have `class_id` set to NULL.\n",
+    "- Example:\n",
+    "```sql\n",
+    "DELETE FROM classes WHERE class_id = 2;\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why Use These Options?\n",
+    "- `ON UPDATE CASCADE` is useful when the parent key may change.\n",
+    "- `ON DELETE SET NULL` helps retain child records while removing broken references."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alternatives\n",
+    "- `ON DELETE CASCADE`: Deletes child rows when parent is deleted.\n",
+    "- `ON DELETE RESTRICT`: Prevents deletion if child rows exist.\n",
+    "- `ON DELETE NO ACTION`: Same as RESTRICT in MySQL.\n",
+    "- `ON DELETE SET DEFAULT`: Not supported in MySQL."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "SQL",
+   "language": "sql",
+   "name": "sql"
+  },
+  "language_info": {
+   "name": "sql"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
